platform/src/objects/DT_0_0_Object__c.object
<CustomObject>
    <description>Data Table 0_0.</description>
    <fields>
        <fullName>DT_0_0_Field_A__c</fullName>
        <description>Data Table 0_0 Field A.</description>
        <inlineHelpText>Data Table 0_0 Field A.</inlineHelpText>
        <label>DT_0_0 Field A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_0_0_Field_B__c</fullName>
        <description>Data Table 0_0 Field B.</description>
        <inlineHelpText>Data Table 0_0 Field B.</inlineHelpText>
        <label>DT_0_0 Field B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_0_0_Field_C__c</fullName>
        <description>Data Table 0_0 Field C.</description>
        <inlineHelpText>Data Table 0_0 Field C.</inlineHelpText>
        <label>DT_0_0 Field C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_0_0_Field_D__c</fullName>
        <description>Data Table 0_0 Field D.</description>
        <inlineHelpText>Data Table 0_0 Field D.</inlineHelpText>
        <label>DT_0_0 Field D</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DT_0_0 Object</label>
    <nameField>
        <label>DT_0_0_Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DT_0_0 Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>